Archive2/32/d9754ff5e2c3e1/output
+ g++-4.8 -std=c++11 -O2 -Wall -Wextra -pedantic-errors main.cpp
main.cpp: In function ‘int main()’:
main.cpp:5:10: error: declaration of ‘auto strength’ has no initializer
     auto strength;
          ^
